force-app/main/default/objects/Opportunity/fields/Reporting_Unit_Rec_Type__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Unit_Rec_Type__c</fullName>
    <label>Reporting Unit Rec Type</label>
    <summaryFilterItems>
        <field>SB_Product__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Advisory, Lending / Deposits / Commitments</value>
    </summaryFilterItems>
    <summaryForeignKey>SB_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>