force-app/main/default/objects/Opportunity/fields/Request_for_Proposal_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Proposal_Type__c</fullName>
    <label>Request for Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>