force-app/main/default/objects/Opportunity/fields/RFP__c.field-meta.xml
<CustomField>
    <fullName>RFP__c</fullName>
    <label>Request for Proposal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expected</fullName>
            </value>
            <value>
                <fullName>Due Date</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>