force-app/main/default/objects/Opportunity/fields/RFP_Date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Date__c</fullName>
    <label>Request for Proposal Date</label>
    <type>Date</type>
</CustomField>