force-app/main/default/objects/Opportunity/fields/SA_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>SA_Additional_Comments__c</fullName>
    <description>Part of opp Feed

Regression: C Reiencke : 15/06/2011 : Field was unerased after being deleted for the regression project. Further investigation required</description>
    <label>Additional Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>