force-app/main/default/objects/Opportunity/fields/SA_Jurisdiction_of_originating_deal__c.field-meta.xml
<CustomField>
    <fullName>SA_Jurisdiction_of_originating_deal__c</fullName>
    <label>Jurisdiction of Originating Deal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>