force-app/main/default/objects/Opportunity/fields/SA_Lost__c.field-meta.xml
<CustomField>
    <fullName>SA_Lost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IRD field</description>
    <inlineHelpText>For a lost deal please provide comments in Reason Won/Lost Comments</inlineHelpText>
    <label>Lost</label>
    <type>Checkbox</type>
</CustomField>