force-app/main/default/objects/Opportunity/fields/SA_Opportunity_Dashboard_Name__c.field-meta.xml
<CustomField>
    <fullName>SA_Opportunity_Dashboard_Name__c</fullName>
    <description>Combination of Client Name and Opportunity Name &amp; Create Date to provide more meaningfull dashboard information</description>
    <formula>Account.Name  &amp; &apos; - &apos; &amp;  Name &amp; &apos; (&apos; &amp; Left(Text(CreatedDate),10) &amp; &apos;)&apos;</formula>
    <label>Opportunity Dashboard Name</label>
    <type>Text</type>
</CustomField>