force-app/main/default/objects/Opportunity/fields/SA_Won__c.field-meta.xml
<CustomField>
    <fullName>SA_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case#1146 - CRT Feed flag
Include all records Old and new for the CRT feed
Field gets updated by wf base on the status of the opportunity
Regression: C Reinecke 14/06/2011 Renamed field label to remove the &quot;CIBSA Global Markets&quot; part</description>
    <inlineHelpText>All CIBSA Global Markets Commodities, Corporate and Buy-Side business units should have this field ticked to include the won Opportunity in the CRT feed</inlineHelpText>
    <label>CRT Feed</label>
    <type>Checkbox</type>
</CustomField>