force-app/main/default/objects/Opportunity/fields/Senior_Coverage_Executive__c.field-meta.xml
<CustomField>
    <fullName>Senior_Coverage_Executive__c</fullName>
    <formula>Account.Senior_Coverage_Executive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Senior Coverage Executive</label>
    <type>Text</type>
</CustomField>