force-app/main/default/objects/Opportunity/fields/Short_Summary__c.field-meta.xml
<CustomField>
    <fullName>Short_Summary__c</fullName>
    <description>Devesh : 03sept 2010 - this is a Mandattory field for the user to key in a short description about the opportunity</description>
    <inlineHelpText>The Short Summary is mandatory and is used for Manco / Exco Opportunity reporting  (100 characters or less)</inlineHelpText>
    <label>Short Summary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>