force-app/main/default/objects/Opportunity/fields/Stage_Detail__c.field-meta.xml
<CustomField>
    <fullName>Stage_Detail__c</fullName>
    <description>SFP-9325 [c] This field contains lower-level detail of the deal</description>
    <label>Stage Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With POR Awaiting Client Information</fullName>
            </value>
            <value>
                <fullName>Origination</fullName>
            </value>
            <value>
                <fullName>With Credit</fullName>
            </value>
            <value>
                <fullName>Returned to Business or Reworked</fullName>
            </value>
            <value>
                <fullName>Awaiting Collateral Perfection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>