force-app/main/default/objects/Opportunity/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>The day the Opportunity discussions started, only editable in the Lead stage.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>