force-app/main/default/objects/Opportunity/fields/Submitted_to_Committee__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Committee__c</fullName>
    <description>Case#2642#1345 &amp; #3508 PCC - Rudolf Niehaus
Relevant Committee Submission Status</description>
    <inlineHelpText>Has the Opportunity been Submitted to the Relevant Committee?</inlineHelpText>
    <label>Submitted to Committee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>