force-app/main/default/objects/Opportunity/fields/Suggested_Offer__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Offer__c</fullName>
    <description>SFP-9325 [c] This is what the sales person is suggesting / offering to client.</description>
    <label>Suggested Offer</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>