force-app/main/default/objects/Opportunity/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <description>When a new Task is created for the Opportunity storing the Task subject in to this field.</description>
    <label>Task Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>