force-app/main/default/objects/Opportunity/fields/Task_URL__c.field-meta.xml
<CustomField>
    <fullName>Task_URL__c</fullName>
    <description>When a new Task is created for the Opportunity storing the Task ID in to this field. 
This filed is using for the Opportunity work flow whenever task ID is changed .</description>
    <label>Task URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>