force-app/main/default/objects/Opportunity/fields/Total_Revenue_Amount_Text__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Amount_Text__c</fullName>
    <description>Store the product&apos;s Total Revenue (Amount) in a text format (EN-0885)</description>
    <formula>TEXT( Amount )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field has been created to store the product&apos;s Total Revenue (Amount) in a text format to avoid special characters being created in the Excel file and causing integration issues</inlineHelpText>
    <label>Total Revenue (Amount) (Text)</label>
    <type>Text</type>
</CustomField>