force-app/main/default/objects/Opportunity/fields/Total_Revenue_Num__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Num__c</fullName>
    <label>Total Revenue (Num)</label>
    <summarizedField>SB_Product__c.Total_Revenue_Num__c</summarizedField>
    <summaryForeignKey>SB_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>