force-app/main/default/objects/Opportunity/fields/Total_SB_Gross_Participation__c.field-meta.xml
<CustomField>
    <fullName>Total_SB_Gross_Participation__c</fullName>
    <description>The total amount that SB will be providing the client. Change to Notional field SGPRT-1229</description>
    <formula>Total_SB_Gross_Participation_Num__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total amount that SB will be providing the client (sum of SB participation)</inlineHelpText>
    <label>Total SB Gross Participation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>