force-app/main/default/objects/Opportunity/fields/Total_SB_Gross_Participation_Num__c.field-meta.xml
<CustomField>
    <fullName>Total_SB_Gross_Participation_Num__c</fullName>
    <description>US-2276 - Summed Notional Value of all selected products included in the opportunity. The total amount that SB will be providing the client. Change to Notional field SGPRT-1229</description>
    <inlineHelpText>The total amount that SB will be providing the client (sum of SB participation)</inlineHelpText>
    <label>Total SB Gross Participation (Num)</label>
    <summarizedField>SB_Product__c.SB_Gross_Participation_Num__c</summarizedField>
    <summaryForeignKey>SB_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>