force-app/main/default/objects/Opportunity/fields/Total_Weighted_Revenue_Expected_Text__c.field-meta.xml
<CustomField>
    <fullName>Total_Weighted_Revenue_Expected_Text__c</fullName>
    <description>Store the product&apos;s Total Weighted Revenue (Expected) in a text format (EH-0885)</description>
    <formula>TEXT(ExpectedRevenue)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field has been created to store the product&apos;s Total Weighted Revenue (Expected) in a text format to avoid special characters being created in the Excel file and causing integration issues</inlineHelpText>
    <label>Total Weighted Revenue (Expected) (Text)</label>
    <type>Text</type>
</CustomField>