force-app/main/default/objects/Opportunity/fields/Total_Won_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Won_Revenue__c</fullName>
    <formula>IF( IsWon , 
Total_Revenue_Num__c , 
null 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Won Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>