force-app/main/default/objects/Opportunity/fields/TrackDevelop__c.field-meta.xml
<CustomField>
    <fullName>TrackDevelop__c</fullName>
    <label>TrackDevelop</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>