force-app/main/default/objects/Opportunity/fields/View_Sharing__c.field-meta.xml
<CustomField>
    <fullName>View_Sharing__c</fullName>
    <description>EMEA_SOW_StandardBank_013: Case 1061 - As a user I need to see who the Opportunity is shared with.
Opens the Opportunity Sharing information in a new window. Modified EN - 956 - To redirect to Opportunity Visibility Page</description>
    <formula>HYPERLINK(&apos;/apex/OppSharedWith_Navigate?oppId=&apos; &amp; Id &amp; &apos;&amp;uiTheme=&apos; &amp; $User.UIThemeDisplayed, &apos;Who is this Opportunity shared with?&apos;, &apos;_self&apos;)</formula>
    <label>View Sharing</label>
    <type>Text</type>
</CustomField>