force-app/main/default/objects/Opportunity/fields/Week_Number_Created__c.field-meta.xml
<CustomField>
    <fullName>Week_Number_Created__c</fullName>
    <formula>IF( 
YEAR(DATEVALUE(CreatedDate))=2009, 
&quot;2009 &quot;&amp;TEXT(MOD( 
FLOOR((DATEVALUE(CreatedDate)-DATEVALUE(&quot;2009-01-05&quot;))/7), 
52) 
+1), 
IF(YEAR(DATEVALUE(CreatedDate))=2010, 
&quot;2010 &quot;&amp;TEXT(MOD(FLOOR((DATEVALUE(CreatedDate)-DATEVALUE(&quot;2010-01-04&quot; ))/7), 
52) 
+1), 
&quot;&quot; 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Number Created</label>
    <type>Text</type>
</CustomField>