force-app/main/default/objects/Opportunity/recordTypes/Africa_Regions_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Africa_Regions_Opportunity</fullName>
    <active>true</active>
    <businessProcess>FinServ__Opportunity Process</businessProcess>
    <description>SFP-9325 [c] An Africa Regions Opportunity</description>
    <label>Africa Regions Opportunity</label>
</RecordType>