force-app/main/default/objects/Opportunity/recordTypes/All_Users.recordType-meta.xml
<RecordType>
    <fullName>All_Users</fullName>
    <active>false</active>
    <businessProcess>All Users</businessProcess>
    <description>Record type to support all users.</description>
    <label>All Users</label>
</RecordType>