force-app/main/default/objects/Opportunity/recordTypes/Closed_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Closed_Opportunity</fullName>
    <active>false</active>
    <businessProcess>Closed Opportunity SP</businessProcess>
    <description>A Closed Lost Opportunity is an opportunity that was identified with a Client but the Bank was not succesfull in securing the particular Products and/or Services with the Client.You will need to provide specific information regarding the reason for lost.</description>
    <label>3 - Closed Opportunity</label>
</RecordType>