force-app/main/default/objects/Opportunity/recordTypes/Develop_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Develop_Opportunity</fullName>
    <active>false</active>
    <businessProcess>Develop Opportunity SP</businessProcess>
    <description>A Developing Opportunity is an opportunity that has progressed where various products and/or services can be added to reflect the estimated Current Year and Total Revnue of the Opportunity. Conflicts Clearing is required where applicable.</description>
    <label>2 - Develop Opportunity</label>
</RecordType>