force-app/main/default/objects/Opportunity/recordTypes/Lead_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Lead_Opportunity</fullName>
    <active>false</active>
    <businessProcess>Lead Opportunity</businessProcess>
    <description>A Lead Opportunity is an opportunity with a Client Contact to provide products and/or services to the Client. It is usually created by the originator and transferred to the Product owner. Products are not required at this stage.</description>
    <label>1 - Lead Opportunity</label>
</RecordType>