force-app/main/default/objects/Opportunity/recordTypes/Opportunity_Path.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Path</fullName>
    <active>true</active>
    <businessProcess>FinServ__Opportunity Process</businessProcess>
    <description>This is a standard sales path for the Opportunity object [SFP-8226]</description>
    <label>Opportunity Path</label>
</RecordType>