force-app/main/default/objects/Opportunity/recordTypes/PP_Partner_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>PP_Partner_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Partner Opportunities</businessProcess>
    <description>A Partner Opportunity is an opportunity with a Partner Contact to provide enter into a partnership.</description>
    <label>Partner Opportunity</label>
</RecordType>