force-app/main/default/objects/Opportunity/validationRules/Cannot_change_currency_if_Products_exist.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_currency_if_Products_exist</fullName>
    <active>true</active>
    <description>Prevent change of currency on the Opportunity if Products exist</description>
    <errorConditionFormula>AND( No_of_Products__c &gt; 0, ISCHANGED( CurrencyIsoCode ))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>The Opportunity currency cannot be changed if there are Products associated with the Opportunity</errorMessage>
</ValidationRule>