force-app/main/default/objects/Opportunity/validationRules/Closed_Won_Opportunity_Without_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Opportunity_Without_Product</fullName>
    <active>true</active>
    <description>User should not be able to save Opportunity as Closed Won when there is no products associated to it.</description>
    <errorConditionFormula>AND(No_of_Products__c&lt;1, ISPICKVAL( StageName,&apos;3 - Closed Won&apos;), RecordType.DeveloperName &lt;&gt; &apos;Africa_Regions_Opportunity&apos;)</errorConditionFormula>
    <errorMessage>You need to have a product associated with a closed won opportunity. Please update your products.</errorMessage>
</ValidationRule>