force-app/main/default/objects/Opportunity/validationRules/ClosedStage_Opportunity_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedStage_Opportunity_Rule</fullName>
    <active>true</active>
    <description>This Rule is set up so that users cannot close opportunity with the Stage = &quot;None&quot;</description>
    <errorConditionFormula>AND(ISPICKVAL( StageName , &apos;None&apos;),$RecordType.Name = &quot;3 - Closed Opportunity&quot;)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Please Select a Stage Value</errorMessage>
</ValidationRule>