force-app/main/default/objects/Opportunity/validationRules/Conflict_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Conflict_Description</fullName>
    <active>true</active>
    <description>This Validation rule was created as part of the PCC project.</description>
    <errorConditionFormula>AND( ISPICKVAL( Current_known_conflict_of_interest__c , &quot;Yes&quot; ) , LEN( GCCR_Conflict_Description__c) = 0 )</errorConditionFormula>
    <errorDisplayField>GCCR_Conflict_Description__c</errorDisplayField>
    <errorMessage>Please enter the Conflict Description</errorMessage>
</ValidationRule>