force-app/main/default/objects/Opportunity/validationRules/Enforce_Committee_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Committee_Approved</fullName>
    <active>true</active>
    <description>Case#2642#1345 &amp; #3508 PCC - Rudolf Niehaus</description>
    <errorConditionFormula>IF(ISPICKVAL(Committee_Approved__c, &quot;&quot;) &amp;&amp; ISPICKVAL(Submitted_to_Committee__c,&quot;Yes&quot;), true, false)</errorConditionFormula>
    <errorDisplayField>Committee_Approved__c</errorDisplayField>
    <errorMessage>You must supply a value for the Committee Approved field when Submitted to Committee has a value of &apos;Yes&apos;</errorMessage>
</ValidationRule>