force-app/main/default/objects/Opportunity/validationRules/Enforce_Reason_for_Win_Loss_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Reason_for_Win_Loss_Comments</fullName>
    <active>false</active>
    <description>Enforce that a description is entered in the field Reason Won / Lost Comments when an opportunity is won / lost
Deactivating the rule as part of SFP-8226</description>
    <errorConditionFormula>AND(
         OR( ISPICKVAL(  StageName , &quot;3 - Closed Won&quot; ),
           ISPICKVAL(  StageName , &quot;4 - Closed Lost&quot; )
          ),

         Reason_Won_Lost_Comments__c  = &quot;&quot; 
           )</errorConditionFormula>
    <errorDisplayField>Reason_Won_Lost_Comments__c</errorDisplayField>
    <errorMessage>Please describe why this opportunity was won / lost</errorMessage>
</ValidationRule>