force-app/main/default/objects/Opportunity/validationRules/FinServ__SingleReferredByEntryByRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__SingleReferredByEntryByRecord</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
        NOT(ISBLANK( FinServ__ReferredByUser__c )), 
        NOT(ISBLANK( FinServ__ReferredByContact__c )) 
    )</errorConditionFormula>
    <errorDisplayField>FinServ__ReferredByContact__c</errorDisplayField>
    <errorMessage>Enter an internal referrer or an external referrer. You can list only one referrer for each referral.</errorMessage>
</ValidationRule>