force-app/main/default/objects/Opportunity/validationRules/Manually_Flag_CRT_Feed_for_Private_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Manually_Flag_CRT_Feed_for_Private_Opp</fullName>
    <active>true</active>
    <description>Case# 1146 - Rudolf Niehaus - 03/2011
Force a user to manually check the CRT Feed check box when a Opportunity is Private as the wf rules that normally do this do not fire on Private Opportunities.</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(StageName,&quot;3 - Closed Won&quot;),ISPICKVAL(StageName,&quot;4 - Closed Lost&quot;)),ISPICKVAL(Opportunity_Owner_Lookup__r.User_CIB_Global_Area__c,&quot;CIBSA&quot;),ISPICKVAL(Opportunity_Owner_Lookup__r.User_Division__c,&quot;Global Markets&quot;), 
OR(ISPICKVAL(Opportunity_Owner_Lookup__r.Business_Unit__c,&quot;Commodities&quot;),ISPICKVAL(Opportunity_Owner_Lookup__r.Business_Unit__c,&quot;Corporates&quot;),ISPICKVAL(Opportunity_Owner_Lookup__r.Business_Unit__c,&quot;Buy-Side&quot;)), IsPrivate = TRUE, SA_Won__c = FALSE)</errorConditionFormula>
    <errorDisplayField>SA_Won__c</errorDisplayField>
    <errorMessage>Please check the CIBSA Global Markets CRT Feed check box for this Opportunity.</errorMessage>
</ValidationRule>