force-app/main/default/objects/Opportunity/validationRules/Opportunity_Closed_Won_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Closed_Won_Reason</fullName>
    <active>true</active>
    <description>SFP-9325 [c] When Stage is changed to ‘Closed Won’, the user will then be prompted to select a reason from a pick list field.</description>
    <errorConditionFormula>AND(
(ISPICKVAL(StageName ,&quot;3 - Closed Won&quot;)||ISPICKVAL(StageName ,&quot;2 - Develop&quot;))&amp;&amp; 
ISPICKVAL(ReasonForWinLossPickList__c,&quot;Client Relevance / Relationship&quot;)||ISPICKVAL( ReasonForWinLossPickList__c,&quot;Favourable Response Time&quot;)|| ISPICKVAL( ReasonForWinLossPickList__c,&quot;Greater Product Mix and Exact Product Fit&quot;)|| ISPICKVAL( ReasonForWinLossPickList__c,&quot;Most Competitive Market Pricing&quot;),


RecordType.Name = &quot;Africa_Regions_Opportunity	&quot;
)</errorConditionFormula>
    <errorDisplayField>ReasonForWinLossPickList__c</errorDisplayField>
    <errorMessage>Please select a Closed Won Reason the Reason Won / Lost field</errorMessage>
</ValidationRule>