force-app/main/default/objects/Opportunity/validationRules/SA_Start_date_cannot_be_later_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>SA_Start_date_cannot_be_later_than_today</fullName>
    <active>true</active>
    <description>The Start Date cannot be later than today&apos;s date.</description>
    <errorConditionFormula>Start_Date__c &gt; today()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>The Start Date cannot be later than today&apos;s date.</errorMessage>
</ValidationRule>