force-app/main/default/objects/Opportunity/listViews/All_Pipeline.listView-meta.xml
<ListView>
    <fullName>All_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY_SCORE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Current_Year_Revenue_Currency__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>Opportunity_Progress__c</columns>
    <columns>Actual_Close_Date__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>1 - Lead,2 - Develop</value>
    </filters>
    <label>All Pipeline</label>
</ListView>