force-app/main/default/objects/Opportunity/listViews/BCC_Opportunities.listView-meta.xml
<ListView>
    <fullName>BCC_Opportunities</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Owner_Division__c</field>
        <operation>equals</operation>
        <value>Business Banking</value>
    </filters>
    <filters>
        <field>Opportunity_Owner_Division__c</field>
        <operation>equals</operation>
        <value>Entrepreneur</value>
    </filters>
    <label>BCC Opportunities</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Business_Banking</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Commercial_Banking</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>